@@ -6,8 +6,8 @@ use Moo;
 use File::DataClass::Types qw( ArrayRef Bool HashRef Result Undef );
 
 has 'found'  => is => 'ro', isa => Bool,     default => 0;
-has 'labels' => is => 'ro', isa => HashRef,  default => sub { return {} };
-has 'list'   => is => 'ro', isa => ArrayRef, default => sub { return [] };
+has 'labels' => is => 'ro', isa => HashRef,  builder => sub { return {} };
+has 'list'   => is => 'ro', isa => ArrayRef, builder => sub { return [] };
 has 'result' => is => 'ro', isa => Result | Undef;
 
 1;
